--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,3 +1,5 @@
+/* Typography */
+ 
 html {
     font-size: 62.5%;
 }
@@ -58,4 +60,31 @@ p {
      }
 }
 
-80 40 24 18
+/* Links */
+a {
+    text-decoration: none;
+}
+
+.link-arrow {
+    color: var(--accent-color);
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.link-arrow::after {
+    content: '-->';
+    margin-left: 5px;
+    transition: margin-left 0.15s;
+}
+
+.link-arrow:hover::after {
+    margin-left: 10px;
+
+}
+
+@media screen and (min-width:1024px) {
+    .link-arrow{
+        font-size: 1.5rem;
+    }
+}
