--- a/Css/styles.css
+++ b/Css/styles.css
@@ -88,3 +88,41 @@ a {
         font-size: 1.5rem;
     }
 }
+/* badges */
+
+.badge {
+    border-radius: 20px;
+    color: white;
+    font-size: 2rem;
+    font-weight: 600;
+    padding: 0.5rem 2rem;
+    text-transform: uppercase ;
+    white-space: nowrap;
+}
+
+
+
+.badge--primary {
+    background: var(--primary-color);
+}
+
+.badge--secondary {
+    background: var(--secondary-color);
+}
+
+.badge--small {
+    font-size: 1.6rem;
+}
+
+
+
+@media screen and (mind-width:1024px) {
+    .badge {
+        font-size: 1.5rem;
+    }
+}
+
+.badge--small {
+    font-size: 1.2rem;
+}
+
