--- a/Css/styles.css
+++ b/Css/styles.css
@@ -157,3 +157,24 @@ a {
         padding-left: 0rem ;
     }   
 }
+
+/* icons */
+
+.icon {
+    width: 40px;
+    height: 40px;
+}
+
+.icon--primary {
+    fill: var(--primary-color);
+}
+
+.icon-container {
+    background: #f3f9fa;
+    width: 64px ;
+    height: 64px;
+    display: inline-flex;
+    border-radius: 100%;
+    justify-content: center;
+    align-items: center;
+}
