--- a/Css/styles.css
+++ b/Css/styles.css
@@ -12,6 +12,8 @@ html {
     --accent-color : #ff3400;
     --headings-color: #1b0760;
     --body-color: #918ca4;
+    --border-color: #ccc;
+    --border-radius: 30px;
 }
 
 body {
@@ -116,6 +118,7 @@ a {
 
 .badge--small {
     font-size: 1.6rem;
+    padding: 0.5rem 1.3rem;
 }
 
 
@@ -154,6 +157,7 @@ a {
 .list--tick .list__item {
     padding-left: 0.5rem ;
     margin-bottom: 1.5rem;
+    font-weight: 600;
 }
 
 @media screen and (min-width: 1024px) {
@@ -200,6 +204,7 @@ a {
 .buttons--primary {
     width: 100%;
     display: inline-block;
+    background: white;
     text-align: center;
     color: var(--headings-color);
     border: var(--headings-color) solid 2.5px;
@@ -227,7 +232,6 @@ a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding-left: ;
 }
 
 .buttons--accent:hover {
@@ -237,6 +241,125 @@ a {
 @media screen and (min-width:1024px) {
     .buttons {
         font-size: 1.5rem;
+    }
+}
+
+/* inputs */
+
+.input {
+    padding: 1.5rem 3.5rem;
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius);
+    background: white;
+    outline: 0;
+    color: var(--headings-color);
+    font-size: 2rem;
+}
+
+
+::placeholder {
+    color: #a7a4ba ;
+    border-radius: var(--border-radius);
+}
+
+
+.input-group {
+    border: 1px solid var(--border-color) ;
+    border-radius: var(--border-radius);
+    display: flex;
+}
+
+.input-group .input {
+    border: 0;
+    flex-grow: 1;
+    padding: 1rem 1.5rem;
+}
+
+.input-group .buttons {
+    margin: 4px;
+}
+
+@media screen and (min-width:1024px) {
+    .input {
+        font-size: 1.5rem;
+    }
+}
+
+/* Cards */
+
+
+.card {
+    border-radius: 7px;
+    box-shadow: 0 0 20px 10px #f3f3f3;
+    overflow: hidden;
+}
+
+ .card__header, .card__body {
+    padding: 2rem 3rem;
+ }
+
+.card--primary .card__header {
+    background: var(--primary-color);
+    color: white;
+}
+
+.card--secondary .card__header {
+    background: var(--secondary-color);
+    color: white;
+}
+
+.card--secondary .badge--secondary {
+    background: #02cdf1;
+}
+
+/* Plans */
+
+.plan__name {
+    margin: 0;
+    color: white;
+    font-weight: 500;
+    font-size: 2.4rem;
+}
+
+.plan__price {
+    font-size: 6rem;
+}
+
+.plan__billing-cycle {
+    color: #ddf8ff;
+    font-size: 2.4rem;
+    font-weight: 300;
+    opacity: 0.8;
+    margin-right: 1rem;
+}
+
+.plan__description {
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block;
+}
+
+.plan .list__item  {
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+}
+
+@media screen and (min-width:1024px) {
+    .plan__name {
+        font-size: 1.4rem;
+    }
+
+    .plan__price {
+        font-size: 5rem;
+    }
+
+    .plan__billing-cycle {
+        font-size: 1.6rem;
+    }
+
+    .plan__description {
+        font-size: 1.7rem;
     }
 }
 
