--- a/Css/styles.css
+++ b/Css/styles.css
@@ -302,7 +302,6 @@ a {
     background: var(--primary-color);
     color: white;
 }
-
 .card--secondary .card__header {
     background: var(--secondary-color);
     color: white;
@@ -310,6 +309,9 @@ a {
 
 .card--secondary .badge--secondary {
     background: #02cdf1;
+}
+.card--primary .badge--primary {
+    background: #126de4;
 }
 
 /* Plans */
@@ -345,6 +347,19 @@ a {
     margin-bottom: 2rem;
 }
 
+.plan--popular .card__header{
+    position: relative;
+}
+
+.plan--popular .card__header::before {
+    content: url(/icons/popular.svg);
+    width: 20px;
+    display: inline-block;
+    position: absolute;
+    top: -6px;
+    right: 5%;
+}
+
 @media screen and (min-width:1024px) {
     .plan__name {
         font-size: 1.4rem;
@@ -364,3 +379,4 @@ a {
 }
 
 
+/* Medias */
