--- a/Css/styles.css
+++ b/Css/styles.css
@@ -379,4 +379,38 @@ a {
 }
 
 
-/* Medias */
+/* Media  objects */
+
+.media {
+    display: flex;
+}
+
+.media__title {
+    margin-top: 0;
+
+    font-size: 2.4rem;
+}
+
+.media__body {
+    margin: 0 2rem;
+}
+ 
+.media__description {
+    font-size: 2rem;
+}
+
+.media__image {
+    margin-top: 1rem;
+}
+
+@media screen and (min-width:1024px) {
+.media__title {
+    font-size: 1.8rem;
+}
+     .media__description {
+        font-size: 1.8rem;
+     }
+}
+
+
+/* Quotes */
