--- a/Css/styles.css
+++ b/Css/styles.css
@@ -14,6 +14,7 @@ html {
     --body-color: #918ca4;
     --border-color: #ccc;
     --border-radius: 30px;
+    --darker-body : #5c5577;
 }
 
 body {
@@ -414,3 +415,49 @@ a {
 
 
 /* Quotes */
+
+.quote {
+    font-size: 3rem;
+    color: var(--darker-body) ;
+    line-height: 1.3;
+}
+
+.quote__text{
+    font-style: italic;
+}
+
+.quote__text::before {
+    content: open-quote ;
+}
+.quote__text::after {
+    content: close-quote ;
+}
+
+.quote .quote__author {
+    font-family: 'Montserrat', sans-serif;
+font-size: 3rem;
+margin-top: 1rem;
+margin-bottom: ;
+}
+
+.quote__description {
+    opacity: 0.4;
+    font-size: 2rem;
+}
+
+@media screen and (min-width:1024px) {  
+
+    .quote .media__title {
+        font-size: 2.4rem;
+    }
+    
+    .quote .quote__description {
+     font-size: 1.6rem ;
+    }
+
+    .quote .quote__text {
+        font-size: 2.4rem;
+    }
+     
+}
+
