--- a/Css/styles.css
+++ b/Css/styles.css
@@ -178,6 +178,15 @@ a {
     fill: var(--primary-color);
 }
 
+.icon--white {
+    fill: #fff;
+}
+ 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon-container {
     background: #f3f9fa;
     width: 64px ;
@@ -186,6 +195,10 @@ a {
     border-radius: 100%;
     justify-content: center;
     align-items: center;
+} 
+
+.icon-container--accent {
+    background: var(--accent-color);
 }
 
 /* buttons */
@@ -479,3 +492,42 @@ margin-bottom: ;
     }
     
 }
+
+/* testimonials */
+
+
+
+.testimonial .testimonial__image {
+    padding: 4rem;
+}
+
+.testimonial__image > img {
+width: 100%;
+}
+
+.testimonial__image{
+    position: relative;
+}
+
+.testimonial__image > .icon-container{
+    position: absolute;
+    top: 56px;
+    right: 8.5px;
+}
+
+@media screen and (min-width:768px) {
+    .testimonial .quote,
+    .testimonial .quote__author {
+        font-size: 2.4rem;
+        margin-top: 5rem;
+        
+    }
+}
+
+@media screen and (min-width:1024px) {
+       .testimonial .quote  {
+        margin-top: 15rem;
+       }
+    
+}
+
