--- a/Css/styles.css
+++ b/Css/styles.css
@@ -235,6 +235,11 @@ a {
     border: 0;
 }
 
+.buttons--stretched {
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
+
 .buttons--secondary:hover {
  background: #58e6ff;
 }
@@ -531,3 +536,49 @@ width: 100%;
     
 }
 
+/* Callouts */
+
+.callout {
+    padding: 4rem;
+    border-radius: 5px;
+
+}
+
+.callout--primary {
+    background: var(--primary-color);
+    color: #fff;
+}
+
+.callout__heading {
+    color: white;
+    margin-top: 0;
+}
+
+
+.callout .buttons {
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+}
+
+
+
+.callout__content {
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .callout .grid--1x2 {
+        grid-template-columns:1fr auto;
+    }   
+   
+    .callout__content {
+        text-align: left;
+    }
+
+    .callout .buttons {
+        justify-self:start ;
+        margin: 0 2rem;
+    }
+
+}
