--- a/Css/styles.css
+++ b/Css/styles.css
@@ -175,7 +175,7 @@ a {
 }
 
 .icon--primary {
-    fill: var(--primary-color);
+ fill: var(--primary-color);
 }
 
 .icon--white {
@@ -191,8 +191,8 @@ a {
     background: #f3f9fa;
     width: 64px ;
     height: 64px;
-    display: inline-flex;
     border-radius: 100%;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
 } 
@@ -455,7 +455,6 @@ a {
     font-family: 'Montserrat', sans-serif;
 font-size: 3rem;
 margin-top: 1rem;
-margin-bottom: ;
 }
 
 .quote__description {
@@ -582,3 +581,39 @@ width: 100%;
     }
 
 }
+
+
+/* collapsibles */
+
+.collapsible__header {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.collapsible__heading {
+    margin-top: 0;
+    font-size: 3rem ;
+}
+
+.collapsible__chevron {
+    transform: rotate(-90deg);
+}
+
+.collapsible__content {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.collapsible--expanded .collapsible__chevron {
+    transform: rotate(0);
+
+}
+
+.collapsible--expanded .collapsible__content {
+    opacity: 1;
+    max-height: 100vh;
+}
+
