--- a/Css/styles.css
+++ b/Css/styles.css
@@ -104,7 +104,6 @@ a {
     font-size: 2rem;
     font-weight: 600;
     padding: 0.5rem 2rem;
-    text-transform: uppercase ;
     white-space: nowrap;
 }
 
@@ -225,6 +224,13 @@ a {
     border: var(--headings-color) solid 2.5px;
 }
 
+.buttons .icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    vertical-align: middle;
+}
+
 .buttons--primary:hover {
     background: var(--headings-color);
     color: white;
@@ -292,7 +298,7 @@ a {
 .input-group .input {
     border: 0;
     flex-grow: 1;
-    padding: 1rem 1.5rem;
+    padding: 1.5rem 4rem;
 }
 
 .input-group .buttons {
@@ -745,6 +751,35 @@ width: 100%;
     .hero__content {
         text-align: left;
         align-self: center;
+    }
+    
+}
+
+/* Domain Block */
+
+.block--domain .input-group {
+    box-shadow: 0 0 30px 20px #e6ebee;
+    border: 0;
+    margin: 4rem auto;
+    max-width: 670px;
+}
+
+.block__domain-prices {
+    display: grid; 
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center ;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+
+@media screen and (min-width:768px) {
+    .block__domain-prices {
+        grid-template-columns: repeat(auto-fit, minmax(10rem,1fr));
+        font-size: 1.5rem;
     }
     
 }
