block plan creation

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -105,6 +105,7 @@ a {
     font-weight: 600;
     padding: 0.5rem 2rem;
     white-space: nowrap;
+    
 }
 
 
@@ -342,6 +343,9 @@ a {
 
 /* Plans */
 
+.plan {
+    transition: transform 0.2s ease-out;
+}
 .plan__name {
     margin: 0;
     color: white;
@@ -373,6 +377,10 @@ a {
     margin-bottom: 2rem;
 }
 
+.plan--popular {
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header{
     position: relative;
 }
@@ -384,6 +392,14 @@ a {
     position: absolute;
     top: -6px;
     right: 5%;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular:hover {
+    transform: scale(1.1);
 }
 
 @media screen and (min-width:1024px) {
@@ -782,4 +798,18 @@ width: 100%;
         font-size: 1.5rem;
     }
     
+}
+
+/* plans-box */
+
+ .block__plans {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+}
+
+.block--container .card {
+    max-width: 500px;
+    margin: 0 auto;
 }
