--- a/Css/styles.css
+++ b/Css/styles.css
@@ -27,6 +27,11 @@ body {
 
 /* Typography */
 
+::selection {
+    background: var(--primary-color);
+    color: white;
+}
+
 h1, h2, h3 {
     color: var(--headings-color);
     margin-bottom: 1rem;
@@ -43,6 +48,7 @@ h2 {
 
 h3 {
     font-size: 3rem;
+    font-weight: 500;
 }
 
 
@@ -141,7 +147,7 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
- color: var(--headings-color);
+
 }
 
 
@@ -154,6 +160,7 @@ a {
 .list--tick {
     list-style-image: url(/icons/tick.svg);
     padding-left: 3rem;
+    color: var(--headings-color);
 } 
 
 .list--tick .list__item {
@@ -425,6 +432,7 @@ a {
 
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__title {
@@ -435,6 +443,7 @@ a {
 
 .media__body {
     margin: 0 2rem;
+    font-size: 2rem;
 }
  
 .media__description {
@@ -655,16 +664,18 @@ width: 100%;
     color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1,
+.block--dark h2, 
+.block--dark h3 {
     color: white;
 }
 
 .block--skewed-right {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 92%);
     padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 .block--skewed-left {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
     padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
@@ -743,10 +754,6 @@ width: 100%;
 }
 
 /* hero */
-
-.hero {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
 
 .hero__tagline {
     font-size: 2rem;
@@ -836,3 +843,30 @@ width: 100%;
        order: 2;
     }
 }
+
+
+/* showcase Block */
+
+
+
+
+.block-showcase__image >img {
+    width: 100%;
+}
+
+
+@media screen and (min-width:768px) {
+.block-showcase .grid {
+    grid-template-columns: 50% 50%;
+}
+
+    .block-showcase__image {
+     justify-self: end;
+    }
+    
+    .block-showcase__image >img {
+        width: auto;
+        max-width: 700px;
+    }
+}
+    
