--- a/Css/styles.css
+++ b/Css/styles.css
@@ -681,6 +681,7 @@ width: 100%;
 
 .block__header {
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .container {
@@ -869,4 +870,85 @@ width: 100%;
         max-width: 700px;
     }
 }
-    
+
+/* footer */
+
+.footer {
+    background: #232323;
+    padding-bottom: 3rem;
+}
+ 
+.footer__section {
+    padding: 2rem;
+    border-bottom: 1px solid #393939;
+}
+
+.footer a {
+    color: #777;
+    transition: color .3s;
+}
+
+.footer a:hover {
+    color: white;
+}
+
+.footer__heading {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.footer__brand {
+   text-align: center;
+   margin-top: 5rem;
+}
+
+.footer__copyright {
+color: white;
+opacity: 0.3;
+    font-size: 2.17rem;
+}
+
+@media screen and (min-width:768px) {
+    .footer__sections {
+        grid-template-columns: repeat(auto-fit, minmax(10rem,1fr));
+    }
+    .footer .collapsible__chevron {
+        display: none; 
+    }
+
+    .footer .collapsible__content {
+        opacity: 1;
+        max-height: 100%;
+    }
+
+    .footer__brand {
+        order: -1;
+        margin-top: 2rem;
+    }
+
+    .footer__brand img {
+        /* TODO: considering adding this to all images */
+        width: 100%;
+        max-width: 230px;
+    }
+
+    .footer__copyright {
+        font-size: 1.5rem;
+
+    }
+
+    .footer__section {
+        border: 0;
+    }
+
+    .footer__heading {
+        font-size: 1.6rem;
+    }
+
+    .footer__section .footer__list {
+        margin-top: 0rem ;
+        font-size: 1.5rem;
+    }
+
+
+}
