--- a/components/testimonial card.html
+++ b/components/testimonial card.html
@@ -1,33 +1,41 @@
-<div class="card testimonial">
-    <div class="grid grid--1x2">
-      <div class="testimonial__image">
-        <img src="/icons/testimonial.jpg" alt="A happy, smiling customer">
-        <span class="icon-container icon-container--accent ">
-          <svg class="icon icon--white icon--small">
-            <use xlink:href=" /icons/sprite.svg#quotes"></use>
-          </svg>
-        </span>
-      </div>
-      <div>
-        <blockquote class="quote">
-          <p class="quote__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugit
-            minus iusto culpa veritatis, nulla sequi earum laborum sint assumenda?
-          </p>
-          <footer>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href=" /icons/sprite.svg#line"></use>
-                </svg>
+<Section class="block">
+  <header class="block__header">
+    <h2>What our Customers are Saying</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, tempore!</p>
+  </header>
+  <div class="container">
+    <div class="card testimonial">
+      <div class="grid grid--1x2">
+        <div class="testimonial__image">
+          <img src="/icons/testimonial.jpg" alt="A happy, smiling customer">
+          <span class="icon-container icon-container--accent ">
+            <svg class="icon icon--white icon--small">
+              <use xlink:href=" /icons/sprite.svg#quotes"></use>
+            </svg>
+          </span>
+        </div>
+        <div>
+          <blockquote class="quote">
+            <p class="quote__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugit
+              minus iusto culpa veritatis, nulla sequi earum laborum sint assumenda?
+            </p>
+            <footer>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary">
+                    <use xlink:href=" /icons/sprite.svg#line"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title quote__author">Johne Lumeo</h3>
+                  <p class="media__description quote__description">Mosh Company CEO</p>
+                </div>
               </div>
-              <div class="media__body">
-                <h3 class="media__title quote__author">Johne Lumeo</h3>
-                <p class="media__description quote__description">Mosh Company CEO</p>
-              </div>
-            </div>
-          </footer>
-        </blockquote>
+            </footer>
+          </blockquote>
+        </div>
       </div>
     </div>
   </div>
+</Section>
